# lambda_fractal

./: .create_api_in_aws.bash.un~  .create_lambda_in_aws.bash.un~  .update_lambda_function_in_aws.bash.un~  .update_lambda_in_aws.bash.un~  CMakeLists.txt  create_api_in_aws.bash  create_lambda_in_aws.bash  mandelbrot.cpp  update_lambda_function_in_aws.bash  update_lambda_in_aws.bash
lambda/: .CMakeLists.txt.un~  .colors.hpp.un~  .mandelbrot.cpp.un~  CMakeLists.txt  colors.hpp  log  mandelbrot.cpp  out
website/: .index.html.un~  .script.js.un~  .style.css.un~  index.html  script.js  style.css
